--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,21 @@
 
     <title>Gist Manager</title>
 
-    <!-- MOVE all scripts into the head -->
-    <script crossorigin="anonymous" defer src="https://github.githubassets.com/assets/wp-runtime-fb531550a936.js"></script>
-    <script crossorigin="anonymous" defer src="https://github.githubassets.com/assets/vendors-node_modules_oddbird_popover-polyfill_dist_popover-fn_js-a8c266e5f126.js"></script>
+    <!-- External GitHub asset scripts -->
+    <script crossorigin="anonymous" defer
+      src="https://github.githubassets.com/assets/wp-runtime-fb531550a936.js">
+    </script>
+    <script crossorigin="anonymous" defer
+      src="https://github.githubassets.com/assets/vendors-node_modules_oddbird_popover-polyfill_dist_popover-fn_js-a8c266e5f126.js">
+    </script>
     <!-- …other external scripts… -->
 
-    <!-- Your main bundle -->
-    <link href="%PUBLIC_URL%/static/css/main.ffd5a0a8.css" rel="stylesheet" />
-    <script defer="defer" src="%PUBLIC_URL%/static/js/main.9446a02f.js"></script>
+    <!-- CRA-managed bundle -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.css" />
   </head>
-  <!-- ADD data-turbo-suppress-warning to suppress if any third-party script ends up in body -->
   <body data-turbo-suppress-warning style="word-wrap: break-word;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script defer src="%PUBLIC_URL%/static/js/main.js"></script>
   </body>
 </html>
