--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
     <title>Gist Manager</title>
 
-    <!-- External GitHub asset scripts -->
-    <script crossorigin="anonymous" defer
+    <script crossorigin defer
       src="https://github.githubassets.com/assets/wp-runtime-fb531550a936.js">
     </script>
-    <script crossorigin="anonymous" defer
+    <script crossorigin defer
       src="https://github.githubassets.com/assets/vendors-node_modules_oddbird_popover-polyfill_dist_popover-fn_js-a8c266e5f126.js">
     </script>
-    <!-- …other external scripts… -->
 
-    <!-- CRA-managed bundle -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.css" />
+
   </head>
-  <body data-turbo-suppress-warning style="word-wrap: break-word;">
+  <body data-turbo-suppress-warning style="word-wrap: break-word">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script defer src="%PUBLIC_URL%/static/js/main.js"></script>
   </body>
 </html>
