revert public/index

--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,21 @@
     <meta name="theme-color" content="#000000" />
     <title>Gist Manager</title>
 
-    <script crossorigin defer
-      src="https://github.githubassets.com/assets/wp-runtime-fb531550a936.js">
-    </script>
-    <script crossorigin defer
-      src="https://github.githubassets.com/assets/vendors-node_modules_oddbird_popover-polyfill_dist_popover-fn_js-a8c266e5f126.js">
-    </script>
+    <script
+      crossorigin
+      defer
+      src="https://github.githubassets.com/assets/wp-runtime-fb531550a936.js"
+    ></script>
+    <script
+      crossorigin
+      defer
+      src="https://github.githubassets.com/assets/vendors-node_modules_oddbird_popover-polyfill_dist_popover-fn_js-a8c266e5f126.js"
+    ></script>
 
-
+    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.css" />
+    <script defer src="%PUBLIC_URL%/static/js/main.js"></script>
   </head>
-  <body data-turbo-suppress-warning style="word-wrap: break-word">
+  <body data-turbo-suppress-warning style="word-wrap:break-word">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
