--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <title>Gist Manager</title>
 
+    <!-- your third-party scripts can live here -->
     <script
       crossorigin
       defer
@@ -17,12 +18,20 @@
       defer
       src="https://github.githubassets.com/assets/vendors-node_modules_oddbird_popover-polyfill_dist_popover-fn_js-a8c266e5f126.js"
     ></script>
+    <!-- end third-party scripts -->
 
-    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.css" />
-    <script defer src="%PUBLIC_URL%/static/js/main.js"></script>
+    <!--
+      ** DO NOT ** hard-code any CRA bundle names.
+      CRA’s HtmlWebpackPlugin will insert the correct
+      <link rel="stylesheet" href="/static/css/main.<hash>.css">
+      and
+      <script src="/static/js/main.<hash>.js">
+      for you.
+    -->
   </head>
   <body data-turbo-suppress-warning style="word-wrap:break-word">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- CRA will inject its <script src="static/js/main.<hash>.js"> here for you. -->
   </body>
 </html>
